--- a/templates/implementingOrganisations/implementing-organisation-view-detail.html
+++ b/templates/implementingOrganisations/implementing-organisation-view-detail.html
@@ -27,48 +27,31 @@
                     <div class="white no-margin-bottom no-padding-bottom">
                         <h2>Financial</h2>
                     </div>
-
-                    <table infinite-scroll='vm.nextPage()' infinite-scroll-disabled='vm.busy' infinite-scroll-distance='1' class="table list-overview" ng-show="vm.activities.length != 0">
-                        <thead>
-                            <tr>
-                                <th width="500">Project title</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr
-                                ng-repeat="item in vm.part_org_activities">
-                                <td>
-
-                                  <a ui-sref="activiteit({ activity_id: item.id })">
-                                    {{ item.title.narratives[0].text }}
-                                  </a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
                     <div class="panel lightblue with-table no-header">
                         <table class="no-format">
                             <tbody>
                                 <tr>
-                                    <td>
-                                        Total partner budget
+                                    <td width="200">
+                                        Total partner commitment:
                                     </td>
                                     <td>
-                                        {{budget.budget__value | shortcurrency :'€'}}
+                                        No data available yet
                                     </td>
                                 </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="panel lightblue with-table no-header">
-                        <table class="no-format">
-                            <tbody>
                                 <tr>
                                     <td>
-                                        Total partner budget
+                                        Total partner budget:
                                     </td>
                                     <td>
-                                        {{budget.budget__value | shortcurrency :'€'}}
+                                        <!-- {{budget.budget__value | shortcurrency :'€'}} -->No data available yet
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        Total partner expenditure:
+                                    </td>
+                                    <td>
+                                        No data available yet
                                     </td>
                                 </tr>
                             </tbody>
@@ -81,14 +64,6 @@
                     </div> -->
                 </div>
                 <div class="col-md-4">
-                    <div class="panel lightblue with-pie">
-                        <h3>Projects per sector</h3>
-                        <hr>
-                        <oipa-pie-chart group-by="activity_status" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
-                        <h3>Projects per programme</h3>
-                        <hr>
-                        <oipa-pie-chart group-by="activity_status" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
-                    </div>
                     <div class="panel lightblue with-table">
                         <h3>Partner information</h3>
                         <hr>
@@ -96,6 +71,10 @@
                             <tr>
                                 <td width="130">IATI identifier</td>
                                 <td>Not yet available</td>
+                            </tr>
+                            <tr>
+                                <td width="130">Projects</td>
+                                <td><a ng-repeat="item in vm.part_org_activities" ui-sref="activiteit({ activity_id: item.iati_identifier })">{{ item.title.narratives[0].text }}{{$last ? '' : ', '}}</a></td>
                             </tr>
                         </table>
                     </div>
@@ -113,7 +92,7 @@
                     <div class="panel lightblue">
                         <h3>Related documents</h3>
                         <hr>
-                            <p ng-show="vm.activity.documents.length == 0">
+                            <p ng-show="!vm.activity.documents">
                                 No documents available
                             </p>
                             <p ng-repeat="document in vm.activity.documents">
