--- a/templates/implementingOrganisations/implementing-organisations-list.html
+++ b/templates/implementingOrganisations/implementing-organisations-list.html
@@ -37,7 +37,7 @@
     </thead>
     <tbody>
         <tr
-            ng-repeat="item in vm.organisations">
+            ng-if="item.name != ''" ng-repeat="item in vm.organisations">
             <td><a ui-sref="organisation({ organisation_id: item.name })">{{ item.name }}<span ng-if="item.name == ''">Unknown</span></a></td>
             <td>{{item.count}} projects</td>
             <!-- <td>TO DO: hide for 7 dec?</td> -->
