--- a/templates/programmes/programme-view-detail.html
+++ b/templates/programmes/programme-view-detail.html
@@ -57,7 +57,7 @@
                     <div class="panel lightblue">
                         <h4>Related documents</h4>
                         <hr>
-                            <p ng-show="vm.activity.documents.length == 0">
+                            <p ng-show="!vm.activity.documents">
                                 No documents available.
                             </p>
                             <p ng-repeat="document in vm.activity.documents">
