--- a/templates/sectors/sector-view-detail.html
+++ b/templates/sectors/sector-view-detail.html
@@ -82,7 +82,7 @@
                     <div class="panel lightblue">
                         <h3>Related documents</h3>
                         <hr>
-                            <p ng-show="vm.activity.documents.length == 0">
+                            <p ng-show="!vm.activity.documents">
                                 No documents available
                             </p>
                             <p ng-repeat="document in vm.activity.documents">
