search tab hidden in main nav

--- a/templates/_layout/navbar.html
+++ b/templates/_layout/navbar.html
@@ -29,8 +29,8 @@
         <li 
           ng-class="{'active': vm.stateName == 'organisations'}"><a ng-class="{'active': vm.stateName == 'organisations'}"  ui-sref="organisations">Project partners</a></li>
 
-        <li 
-          ng-class="{'active': vm.stateName == 'search'}"><a ng-class="{'active': vm.stateName == 'search'}"  ui-sref="search">Search</a></li>
+<!--         <li 
+          ng-class="{'active': vm.stateName == 'search'}"><a ng-class="{'active': vm.stateName == 'search'}"  ui-sref="search">Search</a></li> -->
 
         <li 
           ng-class="{'active': vm.stateName == 'about'}"><a ng-class="{'active': vm.stateName == 'about'}"  ui-sref="about">About RVO open data</a></li>
