--- a/templates/_layout/index.html
+++ b/templates/_layout/index.html
@@ -14,7 +14,7 @@
       <h1>About this portal</h1>
       <p><a href="mailto:iati@rvo.nl"><i class="fa fa-envelope"></i>iati@rvo.nl</a></p>
       <p><a href="https://twitter.com/AiddataRVO" target="_blank"><i class="icon twitter"></i>@AiddataRVO</a></p>
-      <p><a href=""><i class="icon download"></i>Netherlands Enterprise Agency IATI activity file</a></p>
+      <p><a href="http://www.rvo.nl/sites/default/files/rvo_website_content/opendata/IATI.xml"><i class="icon download"></i>Netherlands Enterprise Agency IATI activity file</a></p>
       <p class="margin-top-2">IATI dataset last updated: 3-12-2015</p>
 </p>
     </div>
