--- a/templates/countries/country-view-detail.html
+++ b/templates/countries/country-view-detail.html
@@ -82,9 +82,9 @@
                         <h3>Projects per sector</h3>
                         <hr>
                         <oipa-pie-chart group-by="sector" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
-                        <!-- <h3>Projects per programme</h3>
+                        <h3>Projects per programme</h3>
                         <hr>
-                        <oipa-pie-chart group-by="programme" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart> -->
+                        <oipa-pie-chart group-by="related_activity" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart> 
                     </div>
                      <div class="panel lightblue">
                         <h3>More information</h3>
