programme pie chart group-by

--- a/templates/programmes/programme-view-detail.html
+++ b/templates/programmes/programme-view-detail.html
@@ -36,7 +36,7 @@
                     <div class="panel lightblue with-pie">
                         <h3>Projects per country</h3>
                         <hr>
-                        <oipa-pie-chart group-by="activity_status" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
+                        <oipa-pie-chart group-by="recipient_country" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
                     </div>
                     <div class="panel lightblue" ng-show="vm.programmeUrl">
                         <h3>More information</h3>
