--- a/templates/countries/country-view-detail.html
+++ b/templates/countries/country-view-detail.html
@@ -32,7 +32,7 @@
                         <h2>Related project map</h2>
                     </div>
                     <div class="map country">
-                        <locations-geo-map exact-location="vm.country" map-height="350px"></locations-geo-map>
+                        <locations-geo-map map-height="350px"></locations-geo-map>
                     </div>
                     <div class="white no-margin-bottom no-padding-bottom">
                         <h2>Financial</h2>
