--- a/templates/programmes/programme-view-detail.html
+++ b/templates/programmes/programme-view-detail.html
@@ -37,6 +37,9 @@
                         <h3>Projects per country</h3>
                         <hr>
                         <oipa-pie-chart group-by="recipient_country" aggregation-key="count" aggregations="count,incoming_fund" has-to-contain="related_activity"></oipa-pie-chart>
+                        <h3>Projects per sector</h3>
+                        <hr>
+                        <oipa-pie-chart group-by="sector" aggregation-key="count" aggregations="count,incoming_fund" has-to-contain="related_activity"></oipa-pie-chart>
                     </div>
                     <div class="panel lightblue" ng-show="vm.programmeUrl">
                         <h3>More information</h3>
