--- a/templates/activities/activity-list.html
+++ b/templates/activities/activity-list.html
@@ -11,8 +11,8 @@
                           <option value="-title">Title (Z-A)</option>
                           <!-- <option value="start_actual">Starting date (increasing)</option>
                           <option value="-start_actual">Starting date (decreasing)</option> -->
-                          <option value="incoming_fund">Budget (increasing)</option>
-                          <option value="-incoming_fund">Budget (decreasing)</option>
+                          <option value="activity_incoming_fund_value">Budget (increasing)</option>
+                          <option value="-activity_incoming_fund_value">Budget (decreasing)</option>
                         </select>
                     </div>
                 <span class="results">Results: <span class="total">{{vm.totalActivities}}</span></span>
