--- a/templates/implementingOrganisations/implementing-organisation-view-detail.html
+++ b/templates/implementingOrganisations/implementing-organisation-view-detail.html
@@ -32,7 +32,7 @@
                             <tbody>
                                 <tr>
                                     <td width="200">
-                                        Total partner commitment:
+                                        Total commitment to partner:
                                     </td>
                                     <td>
                                         No data available yet
@@ -40,18 +40,23 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        Total partner budget:
+                                        Total disbursement to partner:
                                     </td>
                                     <td>
-                                        <!-- {{budget.budget__value | shortcurrency :'€'}} -->No data available yet
+                                        No data available yet
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        Total partner expenditure:
+                                        Budget spent: 
                                     </td>
                                     <td>
-                                        No data available yet
+                                        <div class="progress small">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="vm.budgetLeft" aria-valuemin="0" aria-valuemax="100" ng-style="vm.progressStyle">
+                                                <span class="spent">{{vm.budgetLeft}}% spent</span>
+                                            <div class="gradient"></div>
+                                          </div>
+                                        </div>
                                     </td>
                                 </tr>
                             </tbody>
