sector detail page fix

--- a/templates/sectors/sector-view-detail.html
+++ b/templates/sectors/sector-view-detail.html
@@ -56,7 +56,7 @@
                                     <td>
                                         <div class="progress">
                                           <div class="progress-bar" role="progressbar" aria-valuenow="vm.budgetLeft" aria-valuemin="0" aria-valuemax="100" ng-style="vm.progressStyle">
-                                            {{vm.budgetLeft}}% spent
+                                            <span class="spent">{{vm.budgetLeft}}% spent</span>
                                             <div class="gradient"></div>
                                           </div>
                                         </div>
