--- a/templates/implementingOrganisations/implementing-organisations-list.html
+++ b/templates/implementingOrganisations/implementing-organisations-list.html
@@ -10,6 +10,8 @@
                         <option value="">Sort by...</option>
                         <option value="name">Name (A - Z)</option>
                         <option value="-name">Name (Z - A)</option>
+                        <option value="count">Project count (ascending)</option>
+                        <option value="-count">Project count (descending)</option>
                     </select>
                 </div>
                 <span class="results">Results: <span class="total">{{vm.totalOrganisations}}</span></span>
@@ -32,7 +34,6 @@
         <tr>
             <th>Project partners</th>
             <th>Number of projects</th>
-            <!-- <th>Organisation type</th> -->
         </tr>
     </thead>
     <tbody>
@@ -40,7 +41,6 @@
             ng-if="item.name != ''" ng-repeat="item in vm.organisations">
             <td><a ui-sref="organisation({ organisation_id: item.name })">{{ item.name }}<span ng-if="item.name == ''">Unknown</span></a></td>
             <td>{{item.count}} projects</td>
-            <!-- <td>TO DO: hide for 7 dec?</td> -->
         </tr>
     </tbody>
 </table>
