--- a/templates/implementingOrganisations/implementing-organisation-view-detail.html
+++ b/templates/implementingOrganisations/implementing-organisation-view-detail.html
@@ -69,6 +69,14 @@
                     </div> -->
                 </div>
                 <div class="col-md-4">
+                    <div class="panel lightblue with-pie">
+                        <h3>Programmes linked to</h3>
+                        <hr>
+                        <oipa-pie-chart group-by="related_activity" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
+                        <h3>Countries linked to</h3>
+                        <hr>
+                        <oipa-pie-chart group-by="recipient_country" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
+                    </div>
                     <div class="panel lightblue with-table">
                         <h3>Partner information</h3>
                         <hr>
