--- a/templates/sectors/sector-view-detail.html
+++ b/templates/sectors/sector-view-detail.html
@@ -76,9 +76,9 @@
                         <h3>Programmes linked to</h3>
                         <hr>
                         <oipa-pie-chart group-by="related_activity" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
-                        <h3>Programmes linked to</h3>
+                        <h3>Countries linked to</h3>
                         <hr>
-                        <oipa-pie-chart group-by="related_activity" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
+                        <oipa-pie-chart group-by="recipient_country" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
                     </div>
                     <div class="panel lightblue">
                         <h3>Related videos</h3>
