--- a/templates/_partials/filterbar/filter-bar.html
+++ b/templates/_partials/filterbar/filter-bar.html
@@ -57,14 +57,14 @@
               Time range
             </span>
 
-            <!-- <span
+            <span
                 class="filter-pop"
                 ng-click="vm.toggleOpenPanel('recipient_implementing_organisations')" 
                 ng-class="{'active': vm.isOpenedHeader('recipient_implementing_organisations')}"
                 ng-show="vm.isIncludedFilter('recipient_implementing_organisations')">
               Implementing organisations
             </span>
- -->
+ 
             <span 
                 class="filter-pop"
                 ng-click="vm.toggleOpenPanel('search')" 
