--- a/templates/_layout/index.html
+++ b/templates/_layout/index.html
@@ -3,13 +3,13 @@
     <div class="panel">
     </div>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-4 col-sm-6 left">
     <div class="panel transparent">
       <h1>Data reported to the IATI registry since January 2015</h1>
       <p>Find open data on development aid projects and programs executed by the Netherlands Enterprise Agency  and funded by the Dutch Ministry of Foreign Affairs.</p>
     </div>
   </div>
-  <div class="col-md-4 col-md-offset-4">
+  <div class="col-md-4 col-md-offset-4 col-sm-6 right">
     <div class="panel right">
       <h1>About this portal</h1>
       <p><a href="mailto:iati@rvo.nl"><i class="fa fa-envelope"></i>iati@rvo.nl</a></p>
@@ -24,25 +24,25 @@
 
 <div class="container homepage-blocks">
   <div class="row">
-    <div class="col-sm-3">
+    <div class="col-md-3 col-sm-6">
       <div class="panel">
         <h3><a ui-sref="programmes" class="icon handshake">Programmes</span></a></h3>  
         <p>Get a detailed overview of programmes.</p> 
       </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-md-3 col-sm-6">
       <div class="panel">
         <h3><a ui-sref="activities" class="icon lightbulb">Projects</span></a></h3>  
         <p>Get a detailed overview of projects.</p>  
       </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-md-3 col-sm-6">
       <div class="panel">
         <h3><a ui-sref="locations-map" class="icon globe">Countries</span></a></h3>  
         <p>See which countries we work in.</p> 
       </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-md-3 col-sm-6">
       <div class="panel">
         <h3><a ui-sref="sectors" class="icon medal">Sectors</span></a></h3>  
         <p>See which sectors we work in.</p> 
