--- a/templates/_layout/navbar.html
+++ b/templates/_layout/navbar.html
@@ -1,44 +1,80 @@
 <header role="banner" ng-controller="NavbarController as vm">
 
-    <div class="row logo">
-      <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+    <div class="mobile-header hidden-md hidden-lg">
+      <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2">
+        <a ui-sref="home" title="Home" rel="home">
+          <img src="{{templateBaseUrl}}/images/logo-en-mobile.png" />
+        </a>
+      </div>
+    </div>
+
+    <div class="row logo hidden-xs hidden-sm">
+      <div class="col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
         <a ui-sref="home" title="Home" rel="home">
           <img src="{{templateBaseUrl}}/images/logo-en-highres.png" />
         </a>
       </div>
     </div>
 
-    <nav id="primary-navigation" role="navigation">
-        <ul id="main-menu-links" class="inline main-menu">
+    <nav id="primary-navigation" role="navigation"> 
+      <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-menu" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar-1 bar"></span>
+          <span class="icon-bar-2 bar"></span>
+          <span class="icon-bar-3 bar"></span>
+        </button>
+      </div>
+      <div class="collapse navbar-collapse" id="main-menu">
+        <ul id="main-menu-links" class="inline main-menu nav navbar-nav">
           <li 
             class="home first" 
             ng-class="{'active': vm.stateName == 'home'}" 
             ui-sref-active="active">
-            <a ng-class="{'active': vm.stateName == 'home'}" ui-sref="home">Home</a></li>
-        <li  
-          ng-class="{'active': vm.stateName == 'programmes'}">
-          <a ng-class="{'active': vm.stateName == 'programmes'}"  ui-sref="programmes">Programmes</a></li>
-        <li  
-          ng-class="{'active': vm.stateName == 'activities'}">
-          <a ng-class="{'active': vm.stateName == 'activities'}"  ui-sref="activities">Projects</a></li>
-        <li 
-          ng-class="{'active': vm.stateName == 'locations'}">
-          <a ng-class="{'active': vm.stateName == 'locations'}"  ui-sref="locations-map">Countries</a></li>
-        <li 
-          ng-class="{'active': vm.stateName == 'sectors'}"><a ng-class="{'active': vm.stateName == 'sectors'}"  ui-sref="sectors">Sectors</a></li>
-        <li 
-          ng-class="{'active': vm.stateName == 'organisations'}"><a ng-class="{'active': vm.stateName == 'organisations'}"  ui-sref="organisations">Project partners</a></li>
+            <a ng-class="{'active': vm.stateName == 'home'}" ui-sref="home" class="hidden-xs hidden-sm">Home</a>
+            <a ng-class="{'active': vm.stateName == 'home'}" ui-sref="home" class="hidden-md hidden-lg mobi">Home</a>
+          </li>
+          <li  
+            ng-class="{'active': vm.stateName == 'programmes'}">
+            <a ng-class="{'active': vm.stateName == 'programmes'}"  ui-sref="programmes" class="hidden-xs hidden-sm">Programmes</a>
+            <a ng-class="{'active': vm.stateName == 'programmes'}"  ui-sref="programmes" class="hidden-md hidden-lg mobi">Programmes</a>
+          </li>
+          <li  
+            ng-class="{'active': vm.stateName == 'activities'}">
+            <a ng-class="{'active': vm.stateName == 'activities'}"  ui-sref="activities" class="hidden-xs hidden-sm">Projects</a>
+            <a ng-class="{'active': vm.stateName == 'activities'}"  ui-sref="activities" class="hidden-md hidden-lg mobi">Projects</a>
+          </li>
+          <li 
+            ng-class="{'active': vm.stateName == 'locations'}">
+            <a ng-class="{'active': vm.stateName == 'locations'}"  ui-sref="locations-map" class="hidden-xs hidden-sm">Countries</a>
+            <a ng-class="{'active': vm.stateName == 'locations'}"  ui-sref="locations-map" class="hidden-md hidden-lg mobi">Countries</a>
+          </li>
+          <li 
+            ng-class="{'active': vm.stateName == 'sectors'}">
+            <a ng-class="{'active': vm.stateName == 'sectors'}"  ui-sref="sectors" class="hidden-xs hidden-sm">Sectors</a>
+            <a ng-class="{'active': vm.stateName == 'sectors'}"  ui-sref="sectors" class="hidden-md hidden-lg mobi">Sectors</a>
+          </li>
+          <li 
+            ng-class="{'active': vm.stateName == 'organisations'}">
+            <a ng-class="{'active': vm.stateName == 'organisations'}"  ui-sref="organisations" class="hidden-xs hidden-sm">Project partners</a>
+            <a ng-class="{'active': vm.stateName == 'organisations'}"  ui-sref="organisations" class="hidden-md hidden-lg mobi">Project partners</a>
+          </li>
 
-        <!-- <li  -->
-          <!-- ng-class="{'active': vm.stateName == 'search'}"><a ng-class="{'active': vm.stateName == 'search'}"  ui-sref="search">Search</a></li> -->
+          <!-- <li  -->
+            <!-- ng-class="{'active': vm.stateName == 'search'}"><a ng-class="{'active': vm.stateName == 'search'}"  ui-sref="search">Search</a></li> -->
 
-        <li 
-          ng-class="{'active': vm.stateName == 'about'}"><a ng-class="{'active': vm.stateName == 'about'}"  ui-sref="about">About RVO open data</a></li>
-
+          <li 
+            ng-class="{'active': vm.stateName == 'about'}">
+            <a ng-class="{'active': vm.stateName == 'about'}"  ui-sref="about" class="hidden-xs hidden-sm">About RVO open data</a>
+            <a ng-class="{'active': vm.stateName == 'about'}"  ui-sref="about" class="hidden-md hidden-lg mobi">About RVO open data</a>
+            </li>
+        </ul>
+      </div>
           
-</nav><!-- /.branding -->
+    </nav><!-- /.branding -->
 
           
         
-  </header>
+</header>
 
