--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /******************************************************************
-Theme Name: openaidNL
-Theme URI: http://www.openaid.nl
+Theme Name: RVO Aid Data
+Theme URI: http://aiddata.rvo.nl
 Description: 
 Author: Zimmerman & Zimmerman
 Author URI: http://www.zimmermanzimmerman.nl
 Version: 1.0
-Tags: openaidNL, open data, IATI, development aid
+Tags: RVO, open data, IATI, development aid
 
 License: AGPL
 License URI: http://www.gnu.org/licenses/agpl-3.0.html
