final fix mob nav

--- a/templates/_layout/navbar.html
+++ b/templates/_layout/navbar.html
@@ -67,7 +67,7 @@
           <li 
             ng-class="{'active': vm.stateName == 'about'}">
             <a ng-class="{'active': vm.stateName == 'about'}"  ui-sref="about" class="hidden-xs hidden-sm">About RVO open data</a>
-            <a ng-class="{'active': vm.stateName == 'about'}"  ui-sref="about" class="hidden-md hidden-lg mobi" data-toggle="collapse">About RVO open data</a>
+            <a ng-class="{'active': vm.stateName == 'about'}"  ui-sref="about" class="hidden-md hidden-lg mobi" data-toggle="collapse" data-target="#main-menu">About RVO open data</a>
             </li>
         </ul>
       </div>
